<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/bottom_menu_home"
        android:enabled="true"
        android:icon="@drawable/home_icon_menu"
        android:title="@string/home"/>
    <item
        android:id="@+id/bottom_menu_shop"
        android:enabled="true"
        android:icon="@drawable/shop_icon_menu"
        android:title="@string/shop"/>
    <item
        android:id="@+id/bottom_menu_search"
        android:enabled="true"
        android:icon="@drawable/search_icon_menu"
        android:title="@string/search"/>
    <item
        android:id="@+id/bottom_menu_profile"
        android:enabled="true"
        android:icon="@drawable/profile_icon_menu"
        android:title="@string/profile"/>

</menu>