<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".home.fragments.HomeFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_side_default"
                android:layout_marginTop="@dimen/margin_top_default"
                android:layout_marginEnd="@dimen/margin_side_default"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/spinnerLocation"
                    android:layout_width="238dp"
                    android:layout_height="36dp"
                    android:layout_weight="0"
                    android:background="@drawable/spinner_bg"
                    android:entries="@array/locations_sample"
                    android:paddingLeft="10dp"
                    android:paddingTop="5dp"
                    android:paddingRight="35dp" />

                <ImageView
                    android:id="@+id/imageViewNotificationBell"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginLeft="90dp"
                    android:layout_weight="0"
                    android:clickable="true"
                    app:srcCompat="@drawable/bell_app" />

            </LinearLayout>

            <TextView
                android:id="@+id/textViewSaluteUser"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/margin_side_default"
                android:layout_marginTop="26dp"
                android:layout_marginEnd="@dimen/margin_side_default"
                android:fontFamily="@font/poppins_regular"
                android:gravity="center"
                android:text="Hola, Martha"
                android:textColor="#3E4462"
                android:textSize="28sp" />

            <TextView
                android:id="@+id/textViewQuestionHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_side_default"
                android:layout_marginEnd="@dimen/margin_side_default"
                android:fontFamily="@font/poppins_regular"
                android:text="¿Qué te gustaría pedir hoy?"
                android:textColor="#7E7E7E"
                android:textSize="16sp"
                tools:text="¿Qué te gustaría pedir hoy?" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_side_default"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/margin_side_default"
                android:layout_marginBottom="8dp"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/buttonFavoritesHome"
                    style="@style/Widget.AppCompat.Button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="18dp"
                    android:layout_weight="1"
                    android:background="@drawable/home_card_buttons"
                    android:backgroundTint="@color/white"
                    android:isScrollContainer="false"
                    android:stateListAnimator="@null"
                    android:textSize="14sp"
                    app:backgroundTint="@null"
                    app:icon="@drawable/heart_favorite"
                    app:iconGravity="textEnd"
                    app:iconPadding="0dp"
                    app:iconSize="40dp"
                    app:iconTint="@color/soft_red" />

                <Button
                    android:id="@+id/buttonOffersHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/home_card_buttons"
                    android:stateListAnimator="@null"
                    app:backgroundTint="@null"
                    app:icon="@drawable/offers_icon"
                    app:iconGravity="textEnd"
                    app:iconPadding="0dp"
                    app:iconSize="32dp"
                    app:iconTint="@color/soft_red" />

                <Button
                    android:id="@+id/buttonTrendingsHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="16dp"
                    android:layout_weight="1"
                    android:background="@drawable/home_card_buttons"
                    android:stateListAnimator="@null"
                    app:backgroundTint="@null"
                    app:icon="@drawable/trending_icon"
                    app:iconGravity="textEnd"
                    app:iconPadding="0dp"
                    app:iconSize="40dp"
                    app:iconTint="@color/soft_red" />

                <Button
                    android:id="@+id/buttonMoreHome"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/home_card_buttons"
                    android:stateListAnimator="@null"
                    android:textSize="14sp"
                    app:backgroundTint="@null"
                    app:icon="@drawable/more_icon"
                    app:iconGravity="textEnd"
                    app:iconPadding="0dp"
                    app:iconSize="40dp"
                    app:iconTint="@color/soft_red" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_side_default"
                android:layout_marginEnd="@dimen/margin_side_default"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewFavoritesHome"
                    android:layout_width="@dimen/width_text_buttons_home"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="18dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="@string/favoritos"
                    android:textColor="#7E7E7E"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewOffersHome"
                    android:layout_width="@dimen/width_text_buttons_home"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="Ofertas"
                    android:textColor="#7E7E7E"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewTrendingsHome"
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:maxLines="1"
                    android:text="Tendencias"
                    android:textColor="#7E7E7E"
                    android:textSize="14sp" />

                <TextView
                    android:id="@+id/textViewMoreHome"
                    android:layout_width="@dimen/width_text_buttons_home"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:fontFamily="@font/poppins_medium"
                    android:gravity="center"
                    android:text="Más"
                    android:textColor="#7E7E7E"
                    android:textSize="14sp" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_side_default"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="@dimen/margin_side_default"
                android:layout_marginBottom="16dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textViewPromotionsTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="500"
                    android:text="@string/promociones_del_dia"
                    android:textColor="#3E4462"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/textViewSeeMorePromotions"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="400"
                    android:gravity="center|right"
                    android:paddingRight="3dp"
                    android:text="@string/ver_m_s"
                    android:textColor="#E84C4F"
                    android:textSize="14sp" />
            </LinearLayout>

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/recyclerViewPlates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal" />

        </LinearLayout>
    </ScrollView>

</FrameLayout>